Fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ hr{
     margin-top: 20px;
     margin-bottom: 30px;
     font-weight: 300;
-    margin-top: 25px;
+    margin-top: 5px;
     text:auto;
 }
 
@@ -370,7 +370,7 @@ hr{
 
 .text {
     color: #fff;
-    margin-top: 15px;
+    margin-top: 5px;
     margin-bottom: 30px;
 }
 
